terraform_configs/alb.tf
# Application Load Balancer Configuration
resource "aws_lb" "external-alb" {
  name               = "external-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb-sg.id]
  subnets = [
    aws_subnet.public-subnet-1.id,
    aws_subnet.public-subnet-2.id
  ]

  enable_deletion_protection = false

  tags = {
    Name        = "external-alb"
    Environment = var.environment
  }

}

resource "aws_lb_target_group" "external-alb-tg" {
  name     = "external-alb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id


  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200-399"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }

  tags = {
    Name        = "external-alb-tg"
    Environment = var.environment
  }

}

resource "aws_lb_target_group_attachment" "attachment" {
  count            = 2
  target_group_arn = aws_lb_target_group.external-alb-tg.arn
  target_id        = aws_instance.web_server[count.index].id
  port             = 80

}


resource "aws_lb_listener" "external-alb-listener" {
  load_balancer_arn = aws_lb.external-alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.external-alb-tg.arn
  }

}

resource "aws_lb" "internal-alb" {
  name               = "internal-alb"
  internal           = true
  load_balancer_type = "application"
  security_groups    = [aws_security_group.internal-alb-sg.id]
  subnets = [
    aws_subnet.private-subnet-1.id,
    aws_subnet.private-subnet-2.id
  ]

  enable_deletion_protection = false

  tags = {
    Name        = "internal-alb"
    Environment = var.environment
  }

}

resource "aws_lb_target_group" "internal-alb-tg" {
  name     = "internal-alb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200-399"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }

  tags = {
    Name        = "internal-alb-tg"
    Environment = var.environment
  }
  
}

resource "aws_lb_listener" "internal_listener" {  
  load_balancer_arn = aws_lb.internal-alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.internal-alb-tg.arn
  }
  
}

resource "aws_lb_target_group_attachment" "appp-tier-attachment" {
  count            = 2
  target_group_arn = aws_lb_target_group.internal-alb-tg.arn
  target_id        = aws_instance.app_server[count.index].id
  port             = 80

}
